# Kensei

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: auth.py  crud.py  deps.py  models.py
backend/api/routers/: auth.py  autopilot.py  deploy.py  jobs.py  predict.py  upload.py
backend/core/: __init__.py  config.py  logger.py  security.py
backend/deployment/: generator.py
backend/forge/: evaluate.py  pipeline.py  preprocess.py  samples.py  trainers.py
backend/registry/: manager.py  schemas.py
backend/workers/: celery_app.py  tasks.py
frontend-react/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.node.json
frontend-react/src/: index.css  main.tsx
frontend-react/src/app/: App.tsx
frontend-react/src/modules/automl/api/: automl-api.ts  types.ts
frontend-react/src/modules/automl/components/: Dropzone.tsx  FeatureImportanceChart.tsx  StatusBadge.tsx
frontend-react/src/modules/automl/pages/: AutopilotPage.tsx  DatasetsPage.tsx  DeploymentsPage.tsx  JobDetailPage.tsx  (+2 more)
frontend-react/src/pages/auth/: AuthLayout.tsx  LoginPage.tsx  RegisterPage.tsx
frontend-react/src/shared/hooks/: use-auth.tsx
frontend-react/src/shared/lib/: api.ts  utils.ts
frontend/streamlit_app/: components.py  main.py
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
scripts/: init_db.py  run_dev.sh
tests/: conftest.py  test_auth.py  test_autopilot.py  test_backend_p0.py  test_forge.py  test_ownership.py  test_smoke.py
tracking/: mlflow_server.py
(+18 files in other folders)
